--- a/Client/app/src/Components/Style/Header.css
+++ b/Client/app/src/Components/Style/Header.css
@@ -1,8 +1,41 @@
-.header ul {
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+.header-wrapper {
     display: flex;
-    flex-direction: row;
+    width: 100%;
+    height: 80px;
+    background-color: black;
+}
+.header {
+   width: 30%;
+   height: 80px;
 }
 
-ul {
+.header-logo {
+    width: 20%;
+    height: 80px;
+}
+
+.header-logo img {
+
+    height: 80px;
+}
+
+.header ul {
+    display: flex;
+    justify-content: space-between;
     list-style-type: none;
+}
+
+.header ul li {
+    margin: 0 1% 0 0;
+    color: white;
+    font-size: 16px;
+    margin-top: 30%;
+}
+.header ul li p {
+    width: 100px;
 }
