--- a/Client/app/src/Components/Style/Header.css
+++ b/Client/app/src/Components/Style/Header.css
@@ -8,6 +8,9 @@
     width: 100%;
     height: 80px;
     background-color: black;
+    position: fixed;
+    overflow: hidden;
+    top:0
 }
 .header {
    width: 30%;
@@ -35,7 +38,16 @@
     color: white;
     font-size: 16px;
     margin-top: 30%;
+    overflow: hidden;
 }
+.header ul li :hover {
+    transform: translate(0, -4px);
+}
+.header ul li :hover:after {
+    transform: translate(0);
+}
+
+
 .header ul li p {
     width: 100px;
 }
