--- a/Client/app/src/Components/Style/Home.css
+++ b/Client/app/src/Components/Style/Home.css
@@ -1,20 +1,27 @@
 .home-wrapper img {
      /* Set rules to fill background */
   min-height: 100%;
-  min-width: 1024px;
+  min-width: 100%;
 	
   /* Set up proportionate scaling */
   width: 100%;
   height: auto;
 	
   /* Set up positioning */
-  position: fixed;
   top: 80;
   left: 0;
 }
+.home-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
 @media screen and (max-width: 1024px) { /* Specific to this particular image */
     .home-wrapper img {
-      left: 50%;
-      margin-left: -512px;   /* 50% */
+      position: fixed;
+      min-height: 100%;
+      height: auto;
     }
   }
+
